@@ -1,5 +1,10 @@
 2010-04-03  Grégoire Sutre  <gregoire.sutre@gmail.com>
 
+	* util/grub-install.in: Add `|| exit 1' to all grub-probe calls
+	for which failure is fatal.
+
+2010-04-03  Grégoire Sutre  <gregoire.sutre@gmail.com>
+
 	* util/grub-install.in: Use mkdir -p to create grub directory.
 	* util/i386/efi/grub-install.in: Likewise.
 	* util/ieee1275/grub-install.in: Likewise.
